# Secure-Supply-Chain-Management-System

./: .gitignore  Licence  PharmaCorp.crt  PharmaCorp.p12  README.md  ca.crt  ca.key  pyproject.toml  requirements.txt  setup.py  shipment.json  shipment.sig
.github/workflows/: publish.yml  test.yml
cli/: main.py
core/: ca.py  crypto.py  supply_chain.py
tests/: test_crypto.py
web/: app.py  models.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: base.html  index.html  register.html  sign.html  verify.html
